--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>LiGHT Sindri</title>
   </head>
   <body style="height: 2000px;">
     
@@ -53,24 +53,18 @@
               What we do
             </a>
           </li>
-          <li class="nav-item dropdown">
-            <a href="#" class="nav-link dropdown-toggle"
-            id="navbarDropdown" role="button"
-            dara-bs-target="dropdown"
-            aria-expanded="false"
-            >
-              Donate Us
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Donate
             </a>
-            <ul class="dropdown-menu"
-            aria-labelledby="navbarDropdown">
-            <li><a href="#" 
-              class="dropdown-item">Method #1</a></li>
-              <li><a href="#" 
-              class="dropdown-item">Method #2</a></li>
-                <li><a href="#" 
-              class="dropdown-item">Method #3</a></li>
-        </ul>
-        </li>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">#Method 1</a></li>
+              <li><a class="dropdown-item" href="#">#Method 2</a></li>
+              <li><a class="dropdown-item" href="#">#Method 3</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Help</a></li>
+            </ul>
+          </li>
       </div>
       <form class="d-flex">
         <input type="text" class="form-control me-2">
@@ -82,9 +76,6 @@
 
 
 
-
-
-    <h1>Hello, world!</h1>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
