--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
             </ul>
           </li>
       </div>
-      <form class="d-flex">
-        <input type="text" class="form-control me-2">
-        <button type="Submit" class="btn btn-outline-success">
-        Search</button>
+        <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search here" aria-label="Search">
+        <button class="btn btn-outline-success" type="search">Search</button>
+        
       </form>
     </nav>
 
