--- a/index.html
+++ b/index.html
@@ -9,6 +9,37 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <title>LiGHT Sindri</title>
+    <style>
+        .container {
+            margin-top: 50px;
+        }
+
+        #about-us {
+            padding-top: 100px;
+            padding-bottom: 100px;
+        }
+
+        .card {
+            margin-bottom: 30px;
+            border: none;
+            border-radius: 15px;
+            box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+        }
+
+        .card-title {
+            font-size: 24px;
+            font-weight: bold;
+            color: #222;
+            margin-bottom: 20px;
+        }
+
+        .card-text {
+            font-size: 16px;
+            line-height: 1.5;
+            color: #555;
+            margin-bottom: 30px;
+        }
+    </style>
   </head>
   <body style="height: 2000px;">
     
@@ -75,6 +106,21 @@
       </form>
     </nav>
 
+    <section id="about-us">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-md-6 col-sm-12">
+                    <h1 class="display-3">About Us</h1>
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title"><a href="about_us.html">Know More</a></h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
 
 
@@ -86,4 +132,4 @@
 
     
   </body>
-</html>
+</html
