--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                   <div class="d-flex flex-column flex-sm-row w-100 gap-2">
                     <label for="newsletter1" class="visually-hidden">Email address</label>
                     <input id="newsletter1" type="text" class="form-control" placeholder="Email address" fdprocessedid="rshin">
-                    <button class="btn btn-primary" type="button" fdprocessedid="9wcbof">Join</button>
+                    <button class="btn btn-warning" type="button" fdprocessedid="9wcbof">Join</button>
                   </div>
                 </form>
               </div>
