--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <div class="card">
                         <div class="card-body">
                            <div class="btn-group">
-                                <a href="about_us.html"button class="btn btn-warning">Know more</button></a>
+                                <a href="aboutuss.html"button class="btn btn-warning">Know more</button></a>
                               </div>
                            
                         </div>
