--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
   </head>
   <body style="height: 2000px;">
     
-    <nav class="navbar fixed-top navbar-expand-sm navbar-light bg-warning">
+    <nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-dark">
 
         <a
          href="#"
          class="navbar-brand mb-0 h1">
          <img
          class="d-inline-block align-centre"
-         src="https://i.postimg.cc/V68ZnVfM/LIGHT-LOGO.png"
-         width="80" height="50">
+         src="https://i.postimg.cc/cHg0CJsm/logo.png"
+         width="100" height="100">
          LiGHT Sindri
         </a>
         <button
@@ -97,12 +97,7 @@
             </ul>
           </li>
       </div>
-    <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search here" aria-label="Search">
-        <div class="mx-2">
-        <button class="btn btn-danger" type="search">Search</button></div>
-         
-      </form>
+
     </nav>
 
     <section id="about-us">
