--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
          class="navbar-brand mb-0 h1">
          <img
          class="d-inline-block align-centre"
-         src="https://i.postimg.cc/cHg0CJsm/logo.png"
-         width="100" height="100">
+         src="https://i.postimg.cc/V68ZnVfM/LIGHT-LOGO.png"
+         width="80" height="50">
          LiGHT Sindri
         </a>
         <button
@@ -76,12 +76,12 @@
           </li>
           <li class="nav-item">
             <a href="#" class="nav-link">
-              Who we are
+              About Us
             </a>
           </li>
           <li class="nav-item">
             <a href="#" class="nav-link">
-              What we do
+              Our Missions
             </a>
           </li>
         <li class="nav-item dropdown">
