--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
          class="navbar-brand mb-0 h1">
          <img
          class="d-inline-block align-centre"
-         src="https://i.postimg.cc/V68ZnVfM/LIGHT-LOGO.png"
-         width="80" height="50">
+         src="https://i.postimg.cc/G90x9Jcd/LIGHT-LOGO-1.png"
+         width="80" height="78">
          LiGHT Sindri
         </a>
         <button
