--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">
+            <a href="about_us" class="nav-link">
               About Us
             </a>
           </li>
