--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
       </div>
 
     </nav>
-
+<!-- content -->
+     
     <section id="about-us">
         <div class="container">
             <div class="row align-items-center">
@@ -112,7 +113,7 @@
         </div>
     </section>
 
-  
+<!--   footer -->
       <div class="container" style="background-color: black;">
           <footer class="py-5">
             <div class="row">
