--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 <!--       //container -->
  
 <!--   footer -->
-      <div class="container" style="background-color: black;">
+      <div class="container-fluid" style="background-color: black;">
           <footer class="py-5">
             <div class="row">
               <div class="col-6 col-md-2 mb-3">
