--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>LiGHT Sindri</title>
     
   </head>
-  <body style="height: 2000px;">
+  <body>
     
     <nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-dark">
 
