--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
  
 <!--   footer -->
       <div class="container-fluid bg-dark" >
-          <footer class="py-5">
+          <footer class="py-5 mx-5">
             <div class="row">
               <div class="col-6 col-md-2 mb-3">
                 
