--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">
+            <a href="ourmission.html" class="nav-link">
               Our Missions
             </a>
           </li>
