--- a/our_team.html
+++ b/our_team.html
@@ -51,7 +51,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a href="#" class="nav-link">
+        <a href="ourmission.html" class="nav-link">
           Our Missions
         </a>
       </li>
