--- a/ourmission.html
+++ b/ourmission.html
@@ -1,72 +1,76 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>LiGHT Sindri-Our Missions</title>
-   <!-- Link to the Bootstrap CSS file hosted on a Content Delivery Network (CDN) -->
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-   <link rel="stylesheet" type="text/css" href="./CSS/our_team-CSS.css">
-</head>
-<body>
-  <nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-dark">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <a
-     href="#"
-     class="navbar-brand mb-0 h1">
-     <img
-     class="d-inline-block align-centre"
-     src="https://i.postimg.cc/G90x9Jcd/LIGHT-LOGO-1.png"
-     width="80" height="78">
-     LiGHT Sindri
-    </a>
-    <button
-    type="button"
-    data-bs-toggle="collapse"
-    data-bs-target="#navbarNav"
-    class="navbar-toggler"
-    aria-controls="navbarNav"
-    aria-expanded="false"
-    aria-label="Toggle navigation"
-    >
-  <span class="navbar-toggler-icon"></span>
-  </button>
-    <div
-    class="collapse navbar-collapse"
-    id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a href="index.html" class="nav-link">
-          Home
-        </a>
-      </li>
-      <li class="nav-item">
-        <a href="about_us.html" class="nav-link">
-          About Us
-        </a>
-      </li>
-      <li class="nav-item">
-        <a href="our_team.html" class="nav-link">
-          Our Team
-        </a>
-      </li>
-      <li class="nav-item active">
-        <a href="ourmission.html" class="nav-link active">
-          Our Missions
-        </a>
-      </li>
-    <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-          Donate Us
-        </a>
-        <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="#">#Method 1</a></li>
-          <li><a class="dropdown-item" href="#">#Method 2</a></li>
-          <li><a class="dropdown-item" href="#">#Method 3</a></li>
-          <li><hr class="dropdown-divider"></li>
-          <li><a class="dropdown-item" href="#">Help</a></li>
-        </ul>
-      </li>
-  </div>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="CSS/index-CSS.css">
+    <title>LiGHT Sindri-Our Missions</title>
+    
+  </head>
+  <body>
+    
+    <nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-dark">
 
-</nav>
+        <a
+         href="#"
+         class="navbar-brand mb-0 h1">
+         <img
+         class="d-inline-block align-centre"
+         src="https://i.postimg.cc/G90x9Jcd/LIGHT-LOGO-1.png"
+         width="80" height="78">
+         LiGHT Sindri
+        </a>
+        <button
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNav"
+        class="navbar-toggler"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+        >
+      <span class="navbar-toggler-icon"></span>
+      </button>
+        <div
+        class="collapse navbar-collapse"
+        id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a href="index.html" class="nav-link">
+              Home
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="about_us.html" class="nav-link">
+              About Us
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="our_team.html" class="nav-link">
+              Our Team
+            </a>
+          </li>
+          <li class="nav-item active">
+            <a href="ourmission.html" class="nav-link active">
+              Our Missions
+            </a>
+          </li>
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Donate Us
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">#Method 1</a></li>
+              <li><a class="dropdown-item" href="#">#Method 2</a></li>
+              <li><a class="dropdown-item" href="#">#Method 3</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Help</a></li>
+            </ul>
+          </li>
+      </div>
+
+    </nav>
