--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                 </form>
               </div>
             </div>
-        <hr>
+        <hr style="color: aliceblue;">
             <div class="d-flex flex-column flex-sm-row justify-content-center align-items-right mx-5" >
               <p> <span style="color:white;">© Light Sindri, Inc. All rights reserved.</span></p>
               <ul class="list-unstyled d-flex">
