--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
                 <div class="card mt-5 ">
                     <div class="card-body">
-                        <h1 class="card-title">About Us</h1>
+                        <h1 class="card-title">Our Mission</h1>
                         <p class="card-text">With supporting text below as a natural lead-in to additional content Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis voluptas esse minima nisi, eligendi laudantium doloremque dolor est eius optio, nostrum quisquam aut?</p>
                         <a href="#" class="btn btn-warning">Read More</a>
                     </div>
@@ -136,25 +136,7 @@
             </div>
          </div>
     </div>
-  <div class="container-fluid">
-        <div class="row  box">
-            <div class="col-sm-6  mb-sm-0 mt-5">
-                <div class="card">
-                    <div class="card-body">
-                        <h1 class="card-title">About Us</h1>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis voluptas esse minima nisi, eligendi laudantium doloremque dolor est eius optio, nostrum quisquam aut?</p>
-                        <a href="#" class="btn btn-warning">Read More</a>
-                    </div>
-                </div>
-
-                <div class="card mt-5 ">
-                    <div class="card-body">
-                        <h1 class="card-title">About Us</h1>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis voluptas esse minima nisi, eligendi laudantium doloremque dolor est eius optio, nostrum quisquam aut?</p>
-                        <a href="#" class="btn btn-warning">Read More</a>
-                    </div>
-                </div>
-              </div> 
+ 
 <!--        circular_img -->
           <div class="col-sm-6 mb-3 mb-sm-0">
               <section id="image">
