--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="Images/image1.jpg" class="d-block w-100" alt="...">
+      <img src="Images/IMG3.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>First slide label</h5>
         <p>Some representative placeholder content for the first slide.</p>
@@ -155,7 +155,7 @@
               <div class="col-6 col-md-2 mb-3">
                 
                 <h5 style="color: crimson; font-weight: 500;">Useful links</h5>
-                <ul class="nav flex-column" 
+                <ul class="nav flex-column"> 
                   <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary" style="color:white">Home</a></li>
                   <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary"style="color:white">About</a></li>
                   <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary"style="color:white">who we are</a></li>
